tests/positive/test_if_while_parentheses_disallowed.veldanava
#Pre_Descent Primordial_Regalia
#Beginning_Eden

genesis func main():
    genesis if true:
        genesis print(1);
    ;
;
