tests/negative/missing_primordial.veldanava
#Pre_Descent
genesis func main():
    genesis let i32 x = 1;
;
